Document package manager API for standalone applications
Add section to beast-pkgmgmt README covering:
- Application-specific package directories (Utils6.getPackageUserDir)
- Bootstrap sequence for embedding the package manager
- Key API methods table (install/uninstall/list/load)
- Headless BEAST execution via BeastMCMC